force-app/main/default/objects/CC_Session__c/CC_Session__c.object-meta.xml
<CustomObject>
    <description>A single actual occurrence (one class meeting) that belongs to a Course Offering. / 開講のうち実際に開催された1回分の実体。</description>
    <label>Session</label>
    <nameField>
        <displayFormat>SES-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>