force-app/main/default/objects/CC_Session__c/fields/ActualParticipants__c.field-meta.xml
<CustomField>
    <fullName>ActualParticipants__c</fullName>
    <description>Actual number of participants, auto-calculated from Attendance records. / 配下の出席記録のうち出席がチェックされたものの件数を自動集計。</description>
    <inlineHelpText>自動計算のため入力不要（Automatically calculated; no input needed）。</inlineHelpText>
    <label>Actual Participants</label>
    <summaryFilterItems>
        <field>CC_Attendance__c.Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CC_Attendance__c.CC_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>