force-app/main/default/objects/CC_Session__c/fields/CC_CourseOffering__c.field-meta.xml
<CustomField>
    <fullName>CC_CourseOffering__c</fullName>
    <description>The course offering this session belongs to. / この開催回が属する開講。</description>
    <inlineHelpText>Select the parent course offering. / 親となる開講を選択してください。</inlineHelpText>
    <label>Course Offering</label>
    <referenceTo>CC_CourseOffering__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>