force-app/main/default/objects/CC_Session__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>General notes. / 汎用の備考欄。</description>
    <inlineHelpText>Enter any additional notes. / その他特記事項があれば記載してください。</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>