force-app/main/default/objects/CC_Session__c/fields/PlannedParticipants__c.field-meta.xml
<CustomField>
    <fullName>PlannedParticipants__c</fullName>
    <description>Expected number of participants for this session. / この回の参加予定人数。</description>
    <inlineHelpText>Enter the expected number of participants. / 参加予定人数を入力してください。</inlineHelpText>
    <label>Planned Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>