force-app/main/default/objects/CC_Session__c/fields/SessionDate__c.field-meta.xml
<CustomField>
    <fullName>SessionDate__c</fullName>
    <description>The date this session was held. / この回の実施日。</description>
    <inlineHelpText>Enter the date this session took place. / 実施日を入力してください。</inlineHelpText>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>