force-app/main/default/objects/CC_Session__c/fields/SessionNumber__c.field-meta.xml
<CustomField>
    <fullName>SessionNumber__c</fullName>
    <description>The sequence number of this session. / 第何回か。</description>
    <inlineHelpText>Enter the session sequence number. / 第何回かを入力してください。</inlineHelpText>
    <label>Session Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>