force-app/main/default/objects/CC_Session__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Description of this session&apos;s content. / その回の内容・説明。</description>
    <inlineHelpText>Describe what was covered in this session. / この回で扱った内容を記載してください。</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>