force-app/main/default/objects/CC_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_CourseOffering__c</columns>
    <columns>SessionNumber__c</columns>
    <columns>SessionDate__c</columns>
    <columns>PlannedParticipants__c</columns>
    <columns>ActualParticipants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>